--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,9 @@
 
 <%= render 'shared/wrapper' %>
-<% @cocktails.each do |cocktail| %>
-  <%= render 'shared/cards', cocktail: cocktail %>
-<% end %>
+  <div class="container">
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <%= render 'shared/cards', cocktail: cocktail %>
+      <% end %>
+    </div>
+  </div>
