--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
+
+    <%= link_to cocktail_path(cocktail) do %>
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_url 'sex.jpg'%>');">
         <div class="card-category">Monthly Popular</div>
         <div class="card-description">
@@ -9,5 +9,4 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
+    <% end %>
