--- a/app/views/shared/_wrapper.html.erb
+++ b/app/views/shared/_wrapper.html.erb
@@ -1,10 +1,10 @@
 
 
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(36,16,4,0.6) 0%, rgba(0,36,61,0.6) 90%), url(<%= image_url 'barcelone2.jpg'%>);">
+  <div class="banner" style="background-image: url(<%= image_url 'fond.jpg'%>);">
     <div class="banner-content">
       <h1>Le Cokctail party</h1>
       <p>Decouvrez des saveurs inedites</p>
-      <%= link_to "ajouter votre cocktails", new_cocktail_path, class: "btn btn-primary btn-lg" %>
+      <%= link_to "ajouter votre cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
       <!-- <a class="btn btn-primary btn-lg">ajouter votre cocktails</a> -->
     </div>
 </div>
