--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
   </head>
@@ -14,7 +15,7 @@
 
     <%= render 'shared/navbar' %>
 
-    
+
     <%= yield %>
 
 
